# arquimedes

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  pyproject.toml
.github/agents/: copilot-gpt41-chunk-test.agent.md  copilot-no-tools-json.agent.md
.github/prompts/: ask-copilot-gpt41-model.prompt.md
config/: config.codex.yaml  config.example.yaml  config.template.yaml
config/collaborator/: config.local.example.yaml
config/maintainer/: codex.yaml  config.example.yaml
docs/: CURRENT.md  PIPELINE.md  PLAN.md  README.md  agent-handbook.md
docs/collaborator/: agent-handbook-cli.md  agent-handbook.md  setup.md  (+2 more)
scripts/: claude_bare_settings.json  get_claude_oauth_token.sh  migrate_step1_local_graph.py  reenrich_project_planos.py
tests/: test_agent_cli.py  test_agent_commands.py  test_agent_handbook.py  test_bridge_migration.py  test_chunking.py  test_classify.py  test_cluster.py  test_compile.py  test_config.py  test_domain_profiles.py  test_enrich.py  test_enrich_chunks.py  test_enrich_document.py  test_enrich_figures.py  test_enrich_llm.py  test_enrich_metadata.py  test_enrich_prompts.py  test_enrich_stamps.py  test_extract.py  test_extract_figures.py  test_extract_image.py  test_extract_office.py  test_extract_opendataloader.py  test_extract_pdf.py  test_extract_textlike.py  test_freshness.py  test_git_publish.py  test_index.py  test_ingest.py  test_launchd.py  test_lint.py  test_lint_project_reflection.py  test_mcp_auth.py  test_mcp_server.py  test_memory.py  test_migrate_step1.py  test_models.py  test_project_cli.py  test_project_state.py  test_read.py  (+10 more)
(+144 files in other folders)
